[GC] Parallelized behaviours + fixed tests